--- a/Dockerfile_template
+++ b/Dockerfile_template
@@ -7,6 +7,15 @@ LABEL Description="This is a base image, which provides the Jenkins agent execut
 
 
 ARG IMAGE_ARG_APT_MIRROR
+
+ARG IMAGE_ARG_ENCODING
+ARG IMAGE_ARG_JAVA_OPTS
+ARG IMAGE_ARG_LANGUAGE
+ARG IMAGE_ARG_LOCALE
+ARG IMAGE_ARG_REGION
+ARG IMAGE_ARG_TZ_AREA
+ARG IMAGE_ARG_TZ_ZONE
+
 ARG IMAGE_ARG_USER
 ARG IMAGE_ARG_VERSION
 
@@ -16,12 +25,12 @@ ARG IMAGE_ARG_AGENT_WORKDIR=/home/${IMAGE_ARG_USER:-ubuntu}/agent
 ENV AGENT_WORKDIR=${IMAGE_ARG_AGENT_WORKDIR}
 ENV HOME /home/${IMAGE_ARG_USER:-ubuntu}
 
-ENV LANG ${IMAGE_ARG_LOCALE:-en_US.UTF-8}
-ENV LC_ALL ${IMAGE_ARG_LOCALE:-en_US.UTF-8}
-ENV JAVA_OPTS -Duser.language=${IMAGE_ARG_LANGUAGE:-en} -Duser.region=${IMAGE_ARG_REGION:-US} -Dfile.encoding=${IMAGE_ARG_ENCODING:-UTF-8} -Duser.timezone=${IMAGE_ARG_TZ_AREA:-Etc}/${IMAGE_ARG_TZ_ZONE:-UTC}
+ENV JAVA_OPTS -Duser.language=${IMAGE_ARG_LANGUAGE:-en} -Duser.region=${IMAGE_ARG_REGION:-US} -Dfile.encoding=${IMAGE_ARG_ENCODING:-UTF-8} -Duser.timezone=${IMAGE_ARG_TZ_AREA:-Etc}/${IMAGE_ARG_TZ_ZONE:-UTC} ${IMAGE_ARG_JAVA_OPTS}
+ENV LANG ${IMAGE_ARG_LOCALE:-en_US}.${IMAGE_ARG_ENCODING:-UTF-8}
+ENV LC_ALL ${IMAGE_ARG_LOCALE:-en_US}.${IMAGE_ARG_ENCODING:-UTF-8}
 
 
-#COPY --from=cirepo/bionic-locale:%IMAGE_ARG_LOCALE%.%IMAGE_ARG_ENCODING%_%IMAGE_ARG_TZ_AREA%.%IMAGE_ARG_TZ_ZONE%-archive /data/root /
+COPY --from=cirepo/bionic-locale:%IMAGE_ARG_LOCALE%.%IMAGE_ARG_ENCODING%_%IMAGE_ARG_TZ_AREA%.%IMAGE_ARG_TZ_ZONE%-archive /data/root /
 
 
 RUN set -ex \
