--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,13 @@ services:
       - IMAGE_ARG_APT_MIRROR=${IMAGE_ARG_APT_MIRROR:-mirrors.163.com}
 
       - IMAGE_ARG_ENCODING=${IMAGE_ARG_ENCODING:-UTF-8}
-      - IMAGE_ARG_LANGUAGE=${IMAGE_ARG_LANGUAGE:-zh}
-      - IMAGE_ARG_LOCALE=${IMAGE_ARG_LOCALE:-zh_CN}
-      - IMAGE_ARG_REGION=${IMAGE_ARG_REGION:-CN}
+      - IMAGE_ARG_JAVA_OPTS=${IMAGE_ARG_JAVA_OPTS}
+      - IMAGE_ARG_LANGUAGE=${IMAGE_ARG_LANGUAGE:-en}
+      - IMAGE_ARG_LOCALE=${IMAGE_ARG_LOCALE:-en_US}
+      - IMAGE_ARG_REGION=${IMAGE_ARG_REGION:-US}
       #- IMAGE_ARG_TZ=${IMAGE_ARG_TZ:-UTC+8:00}
-      - IMAGE_ARG_TZ_AREA=${IMAGE_ARG_TZ_AREA:-Asia}
-      - IMAGE_ARG_TZ_ZONE=${IMAGE_ARG_TZ_ZONE:-Shanghai}
+      - IMAGE_ARG_TZ_AREA=${IMAGE_ARG_TZ_AREA:-Etc}
+      - IMAGE_ARG_TZ_ZONE=${IMAGE_ARG_TZ_ZONE:-UTC}
 
       - IMAGE_ARG_USER=${IMAGE_ARG_USER:-ubuntu}
       - IMAGE_ARG_VERSION=${IMAGE_ARG_VERSION:-3.20}
@@ -30,7 +31,7 @@ services:
     #- nexus.${INFRASTRUCTURE:-local}:nexus3.${INFRASTRUCTURE:-local}
     #- mvnsite.${INFRASTRUCTURE:-local}:mvnsite.${INFRASTRUCTURE:-local}
     hostname: ${JENKINS_SLAVE_DOMAIN:-jenkins-jnlp-slave}.${INFRASTRUCTURE:-local}
-    image: cirepo/jenkins-jnlp-slave:3.20-bionic
+    image: ${IMAGE_PREFIX:-cirepo}/${IMAGE_NAME:-jenkins-jnlp-slave}:${IMAGE_TAG:-3.20-bionic_en_US.UTF-8_Etc.UTC}
     networks:
       local-network:
         ipv4_address: 172.16.238.35
