--- a/docker/.gitignore
+++ b/docker/.gitignore
@@ -3,7 +3,7 @@
 
 # But not these files...
 !/.gitignore
-!/entrypoint.sh
+!/usr/local/bin/entrypoint.sh
 # etc...
 
 # ...even if they are in subdirectories
