--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     networks:
       local-network:
         ipv4_address: 172.16.238.35
-        ipv6_address: 2001:3984:3989::35
+        #ipv6_address: 2001:3984:3989::35
     restart: always
     volumes:
     - data-agent-workdir:/home/${IMAGE_ARG_USER:-ubuntu}/agent
@@ -52,7 +52,7 @@ networks:
       driver: default
       config:
       - subnet: 172.16.238.0/24
-      - subnet: 2001:3984:3989::/64
+      #- subnet: 2001:3984:3989::/64
 
 volumes:
   data-agent-workdir:
