--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,14 @@ services:
     #- mvnsite:mvnsite
     hostname: ${CONTAINER_HOST_NAME:-jenkins-jnlp-slave}
     image: ${IMAGE_PREFIX:-cirepo/}${IMAGE_NAME:-jenkins-jnlp-slave}:${IMAGE_TAG:-3.27-en_US.UTF-8_Etc.UTC-bionic}
+    labels:
+      deploy.config.commit: ${LABEL_DEPLOY_CONFIG_COMMIT:-unknown}
+      deploy.config.name: ${LABEL_DEPLOY_CONFIG_NAME:-unknown}
+      deploy.config.ref: ${LABEL_DEPLOY_CONFIG_REF:-unknown}
+      deploy.util.commit: ${LABEL_DEPLOY_UTIL_COMMIT:-unknown}
+      deploy.util.ref: ${LABEL_DEPLOY_UTIL_REF:-unknown}
+      instance.name.short: ${LABEL_INSTANCE_NAME_SHORT:-standalone.jenkins-jnlp-slave}
+      instance.name: ${LABEL_INSTANCE_NAME:-127.0.0.1/jenkins-jnlp-slave/standalone}
     networks:
       local-network:
         ipv4_address: 172.16.238.35
