--- a/k8s/jenkins-jnlp-slave-secret.template
+++ b/k8s/jenkins-jnlp-slave-secret.template
@@ -5,8 +5,8 @@ metadata:
   name: jenkins-jnlp-slave-secret
 type: Opaque
 data:
-  # CI_INFRA_OPT_GIT_AUTH_TOKEN is for oss-build/oss-internal
-  # must base64 encode by: echo -n ${CI_INFRA_OPT_GIT_AUTH_TOKEN} | base64 -w 0
+  # CI_OPT_GIT_AUTH_TOKEN is for oss-build/oss-internal
+  # must base64 encode by: echo -n ${CI_OPT_GIT_AUTH_TOKEN} | base64 -w 0
   # see: docker-gitlab/gitlab-runner/README.md about how to get it
-  CI_INFRA_OPT_GIT_AUTH_TOKEN: <PUT_BASE64_CI_INFRA_OPT_GIT_AUTH_TOKEN_HERE_MANUALLY>
+  CI_OPT_GIT_AUTH_TOKEN: <PUT_BASE64_CI_OPT_GIT_AUTH_TOKEN_HERE_MANUALLY>
   JENKINS_URL: <PUT_JENKINS_URL_HERE_MANUALLY>
